# telemetry-carbon-relay-ng

./: .cruft.json  .env  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  Dockerfile.OneAgent  Makefile  README.md  buildspec.yml  buildspec_pr.yml  docker-compose.yml  init.sh  pyproject.toml  start.sh
go/: go.mod  go.sum  main.go
slugrunner/: Dockerfile  Dockerfile.OneAgent  runner_init
templates/: carbon-relay-ng.ini
tests/: README.md  conftest.py  test_rewrite_envoy.py
