[tool.poetry]
name = "telemetry-carbon-relay-ng"
version = "0.1.0"
description = ""
authors = ["Team Telemetry <telemetry@digital.hmrc.gov.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
cookiecutter = "^2.4.0"
cruft = "^2.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
